# ForestFlow

./: .gitignore  README.md  citation.md  pyproject.toml  setup.cfg  setup.py
ForestFlow/: P3D_cINN.py  archive.py  camb_routines.py  emulator_p3d.py  emulator_p3d_plin.py  fit_p3d.py  fits_from_chains.py  input_emu.py  plots_v0.py  plots_v1.py
data/: input_emu.npz  p1d_4_fit_extended.npz  std_pnd_mpg.npz
data/best_arinyo/: mpg_axes.npz  mpg_both.npz  mpg_central_both_kmax3d5_noise3d0.075_kmax1d5_noise1d0.01.npy  mpg_curved_both_kmax3d5_noise3d0.075_kmax1d5_noise1d0.01.npy  mpg_growth_both_kmax3d5_noise3d0.075_kmax1d5_noise1d0.01.npy  mpg_hypercube_both_kmax3d5_noise3d0.075_kmax1d5_noise1d0.01.npy  mpg_neutrinos_both_kmax3d5_noise3d0.075_kmax1d5_noise1d0.01.npy  mpg_phases.npz  mpg_reio_both_kmax3d5_noise3d0.075_kmax1d5_noise1d0.01.npy  mpg_running_both_kmax3d5_noise3d0.075_kmax1d5_noise1d0.01.npy  mpg_seed_both_kmax3d5_noise3d0.075_kmax1d5_noise1d0.01.npy
data/emu_v0/: p3demu_vo.pt  p3demu_vo1.pt
data/emulator_models/: forest_mpg.pt  forest_mpg_metadata.npy  mpg_drop0.pt  mpg_drop1.pt  mpg_drop10.pt  mpg_drop11.pt  mpg_drop12.pt  mpg_drop13.pt  mpg_drop14.pt  mpg_drop15.pt  mpg_drop16.pt  mpg_drop17.pt  mpg_drop18.pt  mpg_drop19.pt  mpg_drop2.pt  mpg_drop20.pt  mpg_drop21.pt  mpg_drop22.pt  mpg_drop23.pt  mpg_drop24.pt  mpg_drop25.pt  mpg_drop26.pt  mpg_drop27.pt  mpg_drop28.pt  mpg_drop29.pt  mpg_drop3.pt  mpg_drop4.pt  mpg_drop5.pt  mpg_drop6.pt  mpg_drop7.pt  mpg_drop8.pt  mpg_drop9.pt  mpg_dropz2.5.pt  mpg_dropz3.5.pt  mpg_hypercube.pt  mpg_jointz.pt  mpg_last.pt  mpg_minz.pt  new_emu.pt
data/figures_machine_readable/: README  fig1.npy  fig2.npy  fig4.npy  fig5a.npy  fig5b.npy  fig6.npy  fig7a.npy  fig7b.npy  fig8.npy  figa1.npy  figa2.npy
data/plin_interp/: Plin_interp_sim0.npy  Plin_interp_sim1.npy  Plin_interp_sim10.npy  Plin_interp_sim11.npy  (+32 more)
dev_notebooks/: GRF_test_Pcross.py
draft/: arxiv.tex  authors.tex  first_page.tex  forestflow.aux  forestflow.bbl  forestflow.bib  forestflow.blg  forestflow.dvi  forestflow.out  forestflow.tex  forestflow_R1.aux  forestflow_R1.bbl  forestflow_R1.blg  forestflow_R1.out  forestflow_R1.tex  forestflow_after_cwr.tex  forestflow_cwr.tex  latexmkrc
forestflow/: P3D_cINN.py  archive.py  camb_routines.py  compute_variance.py  cosmo.py  emulator_p3d.py  emulator_p3d_plin.py  fit_p3d.py  fit_p3dz.py  input_emu.py  integrate_p3d.py  likelihood.py  model_p3d_arinyo.py  p1d.py  pcross.py  plot_routines.py  plots_v0.py  plots_v1.py  priors.py  rebin_p3d.py  utils.py
lya_pk/: P3D_cINN.py  archive.py  emulator_p3d.py  emulator_p3d_plin.py  fit_p3d.py  input_emu.py  likelihood.py  model_p3d_arinyo.py  plot_routines.py  plots_v0.py  plots_v1.py
notebooks/: Central_and_seed_sims.py  Covariance_tests.py  GRF_test_Pcross.py  Impact_ModelParams.py  Input_emu_v1.ipynb  L1O_P3D.ipynb  LoneO_P3D.py  LzO_P3D.py  Reconstruct_P3D_from_Arinyo.ipynb  Redshift_evolution.py  Test_simulations.py  Tutorial_3Darchive.ipynb  Tutorial_Arinyo.py  Tutorial_ForestFlow.ipynb  Tutorial_ForestFlow.py  Tutorial_Pcross.py  Tutorial_archive.py  Tutorial_emulator.py  arinyo_derivatives.ipynb  cINN_emulator.ipynb  chains2file.ipynb  corner_plots.py  p3dpd1emu_v0.pt  training_settings_v0.ipynb  training_settings_v1.ipynb  tutorial_emulator_mine.ipynb  tutorial_new.ipynb
scripts/: Px_functions.py  fs_priors.py  speed_up_arinyo_loading.py
(+537 files in other folders)
