[metadata]
name=forestflow
version=0.0.1
author= Jonas Chaves-Montero and Laura Cabayol-Garcia
author_email = jchaves@ifae.es and lcabayol@pic.es
description = Emulator for Lyman-alpha 3D power spectrum
long_description = file: README.md
license = MIT
classifiers =
    Programming Language :: Python :: 3.10

[options]
packages = find:

[options.packages.find]
include = forestflow

[project.urls]
Homepage="https://github.com/igmhub/ForestFlow"
Issues="https://github.com/igmhub/ForestFlow/issues"